tests/should_succeed/enum_and_local_var.jou
import "stdlib/io.jou"

enum Foo:
    Bar
    Baz

def main() -> int:
    Foo = 123
    printf("%d\n", Foo)  # Output: 123
    return 0
